--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.flutter.maraj.mvvm.project">
+    package="com.coderootz.rider.app">
    <application
-        android:label="project"
+        android:label="RiderApp"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
