--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,35 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3 #This is used for the API call
   provider: ^6.0.0
+  get: ^4.6.5
+  shared_preferences: ^2.0.15
+  url_launcher: ^6.1.6
+  google_fonts: ^3.0.0
+  hexcolor: ^2.0.0
+  lottie: ^1.4.0
+  image_picker: ^0.8.6
+  change_app_package_name: ^1.1.0
+  rounded_loading_button: ^2.0.8
+  intro_slider: ^2.2.9
+
+
+
+
+
+
+
+
+  flutter_launcher_icons: ^0.10.0
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/ic_coderootz.png"
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/img_error.png
+     - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
