--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
 
 
   flutter_launcher_icons: ^0.10.0
+  floor: ^1.3.0
 flutter_icons:
   android: true
   ios: true
@@ -58,6 +59,8 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: ^1.3.0
+  build_runner: ^2.1.2
 
 
 # For information on the generic Dart part of this file, see the
